--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "@atomist/automation-client": "1.8.0-master.20191107225525",
     "@atomist/sdm": "1.8.0-dynamic-goals.20191108140247",
-    "@atomist/sdm-core": "1.8.0-dynamic-goals.20191108152504"
+    "@atomist/sdm-core": "1.8.0-dynamic-goals.20191108152504",
+    "js-yaml": "3.13.1"
   },
   "devDependencies": {
     "@atomist/sdm-local": "1.2.2-master.20191011215150",
